--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                                                     del progetto. <br>
                                                                     Realizzare nuove abitazioni oggi, non significa solo edificare nuovi immobili, ma costruire vere e proprie
                                                                     soluzioni abitative... che si muovono nel presente per essere già nel futuro.
-                                                                    <a href ="privacy/CAPITOLATO.pdf" id="capitolato" style="font-weight: bolder;">Scarica qui il capitolato</a>
+                                                                    <a href ="" id="capitolato" style="font-weight: bolder;">Scarica qui il capitolato</a>
                                                                 </div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                     <!--
@@ -425,6 +425,10 @@
                                                                         data-date="July 2, 2016">
                                                                         <img src = "images/Interni_2/CAMERA DOPPIA_5.jpg" style="object-fit: fit;"></img>
                                                                     </div>
+                                                                    <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                        data-date="July 2, 2016">
+                                                                        <img src = "images/Interni_2/CAMERA SINGOLA_6.jpg" style="object-fit: fit;"></img>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -437,7 +441,7 @@
                                                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                                                 </div>-->
                                                                 <ul>
-                                                                    <li>Gli eleganti appartamenti sono pensati per offrire il massimo comfort con moderne tecnologie che garantiscono pretazioni tecniche, pratiche e funzionali di altissimo livello.</li>
+                                                                    <li>Gli eleganti appartamenti di residenza Chora sono pensati per offrire il massimo comfort con moderne tecnologie che garantiscono prestazioni tecniche, pratiche e funzionali di altissimo livello.</li>
                                                                     <li>Un design contemporaneo, leggero, arioso grazie alla presenza delle grandi vetrate che catturano luce e danno calore e luminosità agli ambienti regalando il piacere di vivere la propria casa.</li>
                                                                     <li>I grandi terrazzi sottolineano l'importanza del rapporto con l'esterno.</li>
                                                                     <li>Tutto è pensato per offrire comfort, sicurezza, benessere.</li>
@@ -511,6 +515,26 @@
                                                                                 <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
                                                                                     data-date="July 2, 2016">
                                                                                     <img src = "images/Foto_2/08.jpg" style="object-fit: fit;"></img>
+                                                                                </div>
+                                                                                <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                                    data-date="July 2, 2016">
+                                                                                    <img src = "images/Foto_2/09.jpg" style="object-fit: fit;"></img>
+                                                                                </div>
+                                                                                <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                                    data-date="July 2, 2016">
+                                                                                    <img src = "images/Foto_2/10.jpg" style="object-fit: fit;"></img>
+                                                                                </div>
+                                                                                <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                                    data-date="July 2, 2016">
+                                                                                    <img src = "images/Foto_2/11.jpg" style="object-fit: fit;"></img>
+                                                                                </div>
+                                                                                <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                                    data-date="July 2, 2016">
+                                                                                    <img src = "images/Foto_2/12.jpg" style="object-fit: fit;"></img>
+                                                                                </div>
+                                                                                <div class="swiper-slide slider_image_5" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
+                                                                                    data-date="July 2, 2016">
+                                                                                    <img src = "images/Foto_2/13.jpg" style="object-fit: fit;"></img>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -1181,7 +1205,7 @@
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Location</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Il residence è circondato da importanti aree verdi ed è situato vicino all'<a href="https://sites.google.com/view/olonagreenway/home" style="color: #88b04b;">olona greenway</a>: una lunga strada in mezzo ai boschi
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Chora è circondato da importanti aree verdi ed è situato vicino all'<a href="https://sites.google.com/view/olonagreenway/home" style="color: #88b04b;">olona greenway</a>: una lunga strada in mezzo ai boschi
                                                                     e ai campi dove si può passeggiare in tranquillità ed essere in contatto con la natura.
                                                                     La presenza di alberi e di altri elementi della natura hanno un effetto positivo sul nostro benessere e circondarsi dal verde aumenta anche la qualità dell'attività fisica, con benefici anche sulla nostra salute.
                                                                 </div>
@@ -1206,7 +1230,7 @@
                                             <div class="column_container">
                                                 <div class="column-inner">
                                                     <div class="cqtooltip-wrapper hotspots-style-1 " data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
-                                                        <img src="images/Esterni_2/05.jpg"/>
+                                                        <img id="img-punti" src="images/Esterni_2/05.jpg"/>
                                                         <div class="cq-hotspots">
                                                             <div class="hotspot-item pulse-white" data-top="50%" data-left="55%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;PARAPETTO IN CRISTALLO&lt;/span&gt;" data-arrowposition="">
