--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                             <li data-index="rs-1" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Linear.easeNone" data-easeout="Linear.easeNone" data-masterspeed="default" data-rotate="0" data-saveperformance="off"
                                                 data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 
-                                                <img src="images/Render/Esterne/POST.jpg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                                                <img src="images/Foto_2/01.jpg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
                                                 <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['1920']" data-height="['5000']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
@@ -598,7 +598,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>147,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -615,7 +615,7 @@
                                                                                                         <li>
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
-																												<em>€ 352.000,00</em>
+																												<em>€ 360.000,00</em>
 																											</span>
                                                                                                         </li>
                                                                                                     </ul>
@@ -624,9 +624,9 @@
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
                                                                                                 <div class="column-inner">
-                                                                                                    <figure class="my_figure" style="padding-top: 100px;">
+                                                                                                    <figure class="my_figure" style="padding-top: 100px; padding-left: 0;">
                                                                                                         <div>
-                                                                                                            <img src="images/Piantine_2/PIANO TERRA dx.png" alt="01" />
+                                                                                                            <img src="images/Piantine_2/PIANO TERRA dx.png" alt="01"/>
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -647,7 +647,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>135,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -665,7 +665,7 @@
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
 																												<em>
-																													€ 324.000,00
+																													€ 335.000,00
 																												</em>
 																											</span>
                                                                                                         </li>
@@ -707,7 +707,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>129,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -721,7 +721,7 @@
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
 																												<em>
-																													€ 322.500,00
+																													€ 335.000,00
 																												</em>
 																											</span>
                                                                                                         </li>
@@ -763,7 +763,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>129,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -777,7 +777,7 @@
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
 																												<em>
-																													€ 322.500,00
+																													€ 335.000,00
 																												</em>
 																											</span>
                                                                                                         </li>
@@ -819,7 +819,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>127,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -833,7 +833,7 @@
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
 																												<em>
-																													€ 330.000,00
+																													€ 350.000,00
 																												</em>
 																											</span>
                                                                                                         </li>
@@ -875,7 +875,7 @@
                                                                                                     <ul class="trx_addons_list trx_addons_list_parameters">
                                                                                                         <li>
                                                                                                             <strong>APPARTAMENTO</strong>
-                                                                                                            <em>105,00 mq</em>
+                                                                                                            <em>127,00 mq</em>
                                                                                                         </li>
                                                                                                         <li>
                                                                                                             <strong>BALCONI</strong>
@@ -889,7 +889,7 @@
                                                                                                             <strong>PREZZO</strong>
                                                                                                             <span class="trx_addons_accent">
 																												<em>
-																													€ 330.000,00
+																													€ 350.000,00
 																												</em>
 																											</span>
                                                                                                         </li>
