Cambia alcuni dettagli
- Cambiato titolo del sito
- Cambiata una freccia sui punti interattivi

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="no-js scheme_default">
 
 <head>
-    <title>Windsor &#8211; Appartamenti moderni in un nuovo complesso residenziale</title>
+    <title>CHORA &#8211; Appartamenti moderni in un nuovo complesso residenziale</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/x-icon" href="images/logo e colore/A Chora Bianco.png" />
@@ -1314,7 +1314,7 @@
                                                         <img id="img-punti" src="images/Esterni_2/05.jpg"/>
                                                         <div class="cq-hotspots">
                                                             <div class="hotspot-item pulse-white" data-top="50%" data-left="55%">
-                                                                <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;PARAPETTO IN CRISTALLO&lt;/span&gt;" data-arrowposition="">
+                                                                <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;PARAPETTO IN CRISTALLO&lt;/span&gt;" data-arrowposition="top">
                                                                     <span></span>
                                                                 </a>
                                                             </div>
