--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                                                     <!--<div class="height_medium"></div>-->
                                                     <div class="sc_content sc_content_default main-title">
                                                         <!--<h6 class="sc_item_subtitle sc_content_subtitle sc_align_center sc_item_title_style_shadow">03</h6>-->
-                                                        <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow">Pianta</h2>
+                                                        <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow" style="color: #026232;">Pianta</h2>
                                                     </div>
                                                     <div class="height_tiny"></div>
                                                     <div id="slider_plans" class="widget_area sc_widget_slider">
