Cambia posizione logo e titolo

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                                                     data-transform_out="opacity:0;s:300;" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                 </div>
 
-                                                <img class="tp-caption  slide_title" data-x="center" data-top="40%" data-hoffset="" data-voffset="-20" data-width="['400']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
+                                                <img class="tp-caption  slide_title main-img" data-x="center" data-top="40%" data-hoffset="" data-voffset="-20" data-width="['400']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
                                                 data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on" src="images/logo e colore/Residenza Chora Logo Bianco.png" style="width: 100px;">
 
-                                                <h1 class="tp-caption   tp-resizeme  slide_title" id="slide-1-layer-1" data-x="center" data-hoffset="" data-y="center" data-voffset="-20" data-width="['1024']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
+                                                <h1 class="tp-caption   tp-resizeme  slide_title first-main-title" id="slide-1-layer-1" data-x="center" data-hoffset="" data-y="center" data-voffset="-20" data-width="['1024']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
                                                     data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                     SOLUZIONI ABITATIVE CHE SI MUOVONO NEL PRESENTE PER ESSERE GIà NEL FUTURO</h1>
 
