Cambia un po' di cose
- Compresso svariate immagini
- Cambiato colore sfondo ultima pagina
- Risolto bug effetto opaco non abbastanza largo della prima pagina

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                                 <img src="images/Foto_2/01.jpg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
-                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['1920']" data-height="['5000']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
+                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['100vw']" data-height="['100vh']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
                                                     data-transform_out="opacity:0;s:300;" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                 </div>
 
