--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                                     <!--<div class="height_medium"></div>-->
                                                     <div class="sc_content sc_content_default main-title">
                                                         <!--<h6 class="sc_item_subtitle sc_content_subtitle sc_align_center sc_item_title_style_shadow">03</h6>-->
-                                                        <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow" style="color: #026232;">Pianta</h2>
+                                                        <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow" style="color: #026232;">Piante</h2>
                                                     </div>
                                                     <div class="height_tiny"></div>
                                                     <div id="slider_plans" class="widget_area sc_widget_slider">
@@ -674,15 +674,6 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div id="zoom_piantina_2" class="img-zoom-result hide_on_mobile"></div>
-                                                                                                    <!--
-                                                                                                    <div class="sc_item_button sc_button_wrap">
-                                                                                                        <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
-                                                                                                            <span class="sc_button_text">
-																												<span class="sc_button_title">Prenota un tour</span>
-                                                                                                            </span>
-                                                                                                        </a>
-                                                                                                    </div>
-                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
@@ -1455,27 +1446,27 @@
             /*insert lens:*/
             img.parentElement.insertBefore(lens, img);
 
-            /*calculate the ratio between result DIV and lens:*/
-            cx = result.offsetWidth / lens.offsetWidth;
-            cy = result.offsetHeight / lens.offsetHeight;
-
-            /*set background properties for the result DIV:*/
-            result.style.backgroundImage = "url('" + img.src + "')";
-            result.style.backgroundSize = (img.width * cx) + "px " + (img.height * cy) + "px";
-
             /*execute a function when someone moves the cursor over the image, or the lens:*/
             lens.addEventListener("mousemove", moveLens);
-            img.addEventListener("mousemove", moveLens);
+            $(img).on("mousemove", moveLens);
             lens.addEventListener("mouseenter", showZoom);
             lens.addEventListener("mouseleave", hideZoom);
             /*and also for touch screens:*/
-            //lens.addEventListener("touchmove", moveLens);
-            //img.addEventListener("touchmove", moveLens);
+            lens.addEventListener("touchmove", moveLens);
+            img.addEventListener("touchmove", moveLens);
 
             function moveLens(e) {
+
+                /*calculate the ratio between result DIV and lens:*/
+                cx = result.offsetWidth / lens.offsetWidth;
+                cy = result.offsetHeight / lens.offsetHeight;
+
+                /*set background properties for the result DIV:*/
+                result.style.backgroundImage = "url('" + img.src + "')";
+                result.style.backgroundSize = (img.width * cx) + "px " + (img.height * cy) + "px";
+
                 //rendo visibile il div
                 //document.getElementById("zoom_piantina_1").show();
-                //console.log("ciao");
                 var pos, x, y;
                 if(isNaN(cx) || isNaN(cy)) {
                     cx = result.offsetWidth / lens.offsetWidth;
@@ -1489,6 +1480,7 @@
                 /*calculate the position of the lens:*/
                 x = pos.x - (lens.offsetWidth / 2);
                 y = pos.y - (lens.offsetHeight / 2);
+                
                 /*prevent the lens from being positioned outside the image:*/
                 if (x > img.width - lens.offsetWidth) {x = img.width - lens.offsetWidth;}
                 if (x < 0) {x = 0;}
@@ -1517,24 +1509,30 @@
             }
 
             function showZoom() {
-                $(".img-zoom-result").show();
+                $("#"+resultID).show();
             }
 
             function hideZoom() {
-                $(".img-zoom-result").hide();
+                $("#"+resultID).hide();
             }
 
         }
 
-        // Initiate zoom effect:
-        if( !/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-            imageZoom("piantina_1", "zoom_piantina_1");
-            imageZoom("piantina_2", "zoom_piantina_2");
-            imageZoom("piantina_3", "zoom_piantina_3");
-            imageZoom("piantina_4", "zoom_piantina_4");
-            imageZoom("piantina_5", "zoom_piantina_5");
-            imageZoom("piantina_6", "zoom_piantina_6");
-        }
+        let pianteInterval = setInterval(function() {
+            if( !/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+                let completed = true;
+                for(let i = 1; i <= 6; i++) {
+                    const name = "piantina_" + i;
+                    const events = $._data( $("#"+name)[0], "events" );
+                    if(events == undefined || events.mousemove == undefined){
+                        imageZoom(name, "zoom_" + name);
+                        completed = false;
+                    }
+                }
+                if(completed)
+                    clearInterval(pianteInterval);
+            }
+        }, 200);
         
     </script>
 </body>
