--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
                                 <!--</div>-->
                             </section>
 
-                            <section class="no-col-padding columns-stretch content-middle">
-                                <div class="container" id="custom_container_1">
+                            <section class="no-col-padding columns-stretch content-middle" style="height: 85vh;">
+                                <div class="container" id="custom_container_1" style="top: 50%; transform: translateY(-50%);">
                                     <div class="row">
                                         <a id="sc_anchor_plans" class="sc_anchor sc_anchor_default titolo_colorato" title="Pianta" data-icon="icon-floor" data-url=""></a>
                                         <div class="columns_wrap">
