Cambia posizione zoom

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure" id="map_1">
                                                                                                         <div>
-                                                                                                            <div class="img-zoom-container">
+                                                                                                            <div class="img-zoom-container" id="container_1">
                                                                                                                 <img id="piantina_1" src="images/Piantine_2/PIANO TERRA dx.png">
                                                                                                             </div>
                                                                                                         </div>
